--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,10 +30,10 @@
 	</string-array>
 
 	<!--fragment_my_wishes-->
-	<string name="fragment_my_wishes_add">新心愿</string>
 	<string name="fragment_my_wishes_test_content1">life will be better !</string>
 	<string name="fragment_my_wishes_test_content2">you it will !</string>
 	<string name="fragment_my_wishes_test_content3">god beless you !</string>
 	<string name="fragment_my_wishes_test_content4">Do you love me ?</string>
+	<string name="fragment_my_wishes_test_content5">it is good !</string>
 
 </resources>
