--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
 	</string-array>
 
 	<!--fragment_my_wishes-->
-	<string name="fragment_my_wishes_test_content1">life will be better !</string>
+	<string name="fragment_my_wishes_test_content1">世界很大,我想去看看，望老板批准啊 !</string>
 	<string name="fragment_my_wishes_test_content2">you it will !</string>
 	<string name="fragment_my_wishes_test_content3">god beless you !</string>
 	<string name="fragment_my_wishes_test_content4">Do you love me ?</string>
