--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,6 @@
 
 	<string name="toolbar_pick_photo_title">请选择一个相册</string>
 	<string name="toolbar_edit_achievement_title">成就上传</string>
+
+	<string name="achievement_edit_hint">记录一下呗&#8230;</string>
 </resources>
