the　achievement optimize

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,39 @@
 
 	<string name="menu_achievement_add">添加成就</string>
 	<string name="menu_achievement_play">展示成就</string>
+
+	<string name="popup_window_btn_share">分享</string>
+	<string name="popup_widow_btn_delete">删除</string>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </resources>
