--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,8 +61,9 @@
 
 
 
-
-
+	<item type="id" name="tag_zero">0</item>
+	<item type="id" name="tag_first">1</item>
+	<item type="id" name="tag_second">2</item>
 
 
 
