--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
 	<string name="popup_window_btn_share">分享</string>
 	<string name="popup_widow_btn_delete">删除</string>
 
-	<string name="about_us">\t\t\t\t\t\t我们是一群仍在热情学习Android开发的小白开发者们，我们仍会对这个App进行优化升级，敬请期待！若有任何意见，请发送至475384637@qq.com。</string>
+	<string name="about_us">我们是一群仍在热情学习Android开发的小白开发者们，我们仍会对这个App进行优化升级，敬请期待！若有任何意见，请发送至475384637@qq.com。</string>
 
 
 
